--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Adventure Game</title>
+  <title>Tirerian Terror</title>
   <style>
     body {
       font-family: sans-serif;
