Added Stats HUD

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <div id="story"></div>
   <div id="choices"></div>
   <div id="Inventory"></div>
+  <div id="stats"></div>
   <button id="inventoryBTN">Inventory</button>
 
   <!-- if all your .js files are in the same folder as index.html -->
