Added colors to story background and updated fonts

--- a/index.html
+++ b/index.html
@@ -14,20 +14,26 @@
       padding: 10px;
     }
     #story {
+      font-family: "Georgia" , serif;
+      font-size: 18px;
+      color:#111;
       min-height: 200px;   /* ensures the story area shows */
       margin-bottom: 20px;
       padding: 10px;
-      background: #222;
-      border: 1px solid #555;
+      background: #f6dda6;
+      border: 1px solid #9a6627;
       border-radius: 8px;
     }
     #choices {
       margin-bottom: 20px;
     }
     #Inventory {
+      font-family: 'Courier New', monospace;
+      font-size: 16px;
       margin-top: 20px;
     }
     #stats {
+      font-family: "Tahoma", sans-serif;
       position: fixed;
       bottom: 10px;
       right: 10px;
