changed to cursive story font

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       padding: 10px;
     }
     #story {
-      font-family: "Georgia" , serif;
+      font-family: 'Uncial Antiqua', cursive;
       font-size: 18px;
       color:#111;
+      line-height: 1.6;
       min-height: 200px;   /* ensures the story area shows */
       margin-bottom: 20px;
       padding: 10px;
