changed enemy spawn events added console window

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
       font-size: 14px;
       color: #0f0;
     }
+    #console {
+      font-family:'Courier New', Courier, monospace;
+      position: fixed;
+      left: 10px;
+      bottom: 10px;
+      background: #222;
+      padding: 10px;
+      border: 1px solid #555;
+      border-radius: 8px;
+      font-size: 14px;
+      color: rgb(243, 63, 63);
+
+    }
   </style>
 </head>
 <body>
@@ -52,6 +65,7 @@
   <div id="choices"></div>
   <div id="Inventory"></div>
   <div id="stats"></div>
+  <div id="console"></div>
   <button id="inventoryBTN">Inventory</button>
 
   <!-- if all your .js files are in the same folder as index.html -->
